# vellottie

./: .gitignore  Cargo.toml  README.md  index.html  nursery-81088ba2349c25d2.js  nursery-81088ba2349c25d2_bg.wasm  nursery-a80ea96817fdfef.js  nursery-a80ea96817fdfef_bg.wasm  nursery-c206a5ed5110ba79.js  nursery-c206a5ed5110ba79_bg.wasm  nursery-ccd3a7e9af09b30c.js  nursery-ccd3a7e9af09b30c_bg.wasm  nursery-d85cf21749569d14.js  nursery-d85cf21749569d14_bg.wasm
.github/workflows/: ci.yml  release.yml
assets/: rotating_square2.json
demo/: Cargo.toml
demo/src/: main.rs
nursery/: Cargo.toml  index.html
nursery/assets/: rect_and_circle3.json  rotating_square.json  square_skew_30_35.json
nursery/files/: rect_and_circle.json
nursery/src/: main.rs  nav.rs  player.rs  vellottie_player.rs
src/: breadcrumb.rs  error.rs  import.rs  lib.rs  model.rs  util.rs
src/import/: defaults.rs  layers.rs  mod.rs  properties.rs
src/models/: lottie.rs  mod.rs
src/models/assets/: image.rs  mod.rs  precomposition.rs
src/models/layer/: animated_properties.rs  common.rs  enumerations.rs  mod.rs  precomposition.rs  shape.rs  transform.rs
src/models/shapes/: common.rs  ellipse.rs  group.rs  mod.rs  polystar.rs  rectangle.rs  transform.rs
src/parser/: breadcrumb.rs  error.rs  mod.rs  util.rs
src/parser/models/: animated_properties.rs  lottie.rs  mod.rs
src/parser/models/assets/: image.rs  mod.rs  precomposition.rs
src/parser/models/layer/: animated_properties.rs  common.rs  enumerations.rs  mod.rs  precomposition.rs  shape.rs  transform.rs
src/parser/models/shapes/: common.rs  ellipse.rs  mod.rs  path.rs  polystar.rs  rectangle.rs  transform.rs
src/parser/schema/: animated_properties.rs  lottie.rs  mod.rs  transform.rs
src/parser/schema/animated_properties/: animated_property.rs  color_value.rs  gradient_colors.rs  keyframe.rs  keyframe_base.rs  keyframe_bezier_handle.rs  mod.rs  multi_dimensional.rs  position.rs  position_keyframe.rs  shape_keyframe.rs  shape_property.rs  split_vector.rs  value.rs
src/parser/schema/animation/: composition.rs
src/parser/schema/assets/: asset.rs  file_asset.rs  image.rs  mod.rs  precomposition.rs
src/parser/schema/constants/: mask_mode.rs  mod.rs
src/parser/schema/helpers/: bezier.rs  color.rs  int_boolean.rs  mask.rs  mod.rs  transform.rs  visual_object.rs
src/parser/schema/layers/: common.rs  enumerations.rs  mod.rs  null.rs  precomposition.rs  shape.rs  solid_color.rs  text.rs  visual.rs
src/parser/schema/shapes/: base_stroke.rs  common.rs  ellipse.rs  enumerations.rs  fill.rs  gradient.rs  gradient_fill.rs  gradient_stroke.rs  group.rs  merge.rs  mod.rs  offset_path.rs  path.rs  polystar.rs  pucker_bloat.rs  rectangle.rs  repeater.rs  repeater_transform.rs  shape.rs  shape_element.rs  stroke.rs  stroke_dash.rs  transform.rs  trim.rs
src/parser/schema/styles/: color_overlay_style.rs  gradient_overlay_style.rs  layer_style.rs  mod.rs  outer_glow_style.rs  satin_style.rs
src/parser/schema/text/: character_data.rs  character_precomp.rs  character_shapes.rs  mod.rs  text_alignment_options.rs  text_data.rs  text_document.rs  text_range_selector.rs
src/runtime/: mod.rs  render.rs
src/runtime/model/: animated.rs  fixed.rs  mod.rs  spline.rs  value.rs
tests/: Bobber.json  Bobber2.json  Reggie-z.json  basic.rs  chair.json  clown.rs  dolphin.json  group_shape.rs  image.rs  layer_basic.rs  layers.rs  linear_gradient.json  precomposition.rs  radial_gradient.json  rectangle_and_circle.rs  rectangle_circle_anim.json  rectangle_circle_anim.rs  rectangle_circle_mask.json  square_skew_45_90.json  square_skew_45_neg_90.json  square_skew_neg_45_90.json  squid.rs  suckers.json  suckers.rs  transform_with_splits.rs
