[package]
name = "vellottie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
lazy_static = "*"
test-log = "*"
env_logger = "*"
