[workspace]
resolver = "2"
members = ["demo", "nursery"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/vectorgameexperts/vellottie"

[workspace.dependencies]
vello = { git = "https://github.com/linebender/vello", rev = "28914d66f675efecf03c53261a0fb1b8ecce4fe9" }

[package]
name = "vellottie"
description = "Lottie renderer built on vello."
authors = [
  "Sebastian Hamel <sebjfk@gmail.com>",
  "Spencer C. Imbleau <spencer@imbleau.com>",
]
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics", "animation", "lottie"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vello = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
log = "0.4"
lazy_static = "1.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# These settings are to get the WASM blob smaller for the nursery.
[profile.release.package."nursery"]
codegen-units = 1
opt-level = 'z'
