[package]
name = "with_winit"
description = "An example using vello to render to a winit window"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vellottie = { path = "../" }
vello = { workspace = true, features = ["buffer_labels"] }
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
wgpu = "0.16"
winit = "0.28.1"
pollster = "0.3"
env_logger = "0.10.0"
