[package]
name = "nursery"
version = "0.1.0"
edition = "2021"

[dependencies]
include_dir = "0.7"
stylist = { version = "0.12.0", features = ["yew_integration"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-dialogs = "0.2.0"
# TODO: Remove when stable
cssugar = { git = "https://github.com/simbleau/cssugar", rev = "e0c185a961eb3d1873efbb20c3375fda2e7d9a40" }
console_error_panic_hook = "0.1"
console_log = "*"
log = "*"
