[package]
name = "nursery"
version = "0.1.0"
edition = "2021"

[dependencies]
vellottie = { path = "../" }
include_dir = "0.7"
stylist = { version = "0.12.0", features = ["yew_integration"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-dialogs = "0.2.0"
gloo-timers = "0.3"
# TODO: Remove when stable
cssugar = { git = "https://github.com/simbleau/cssugar", rev = "e0c185a961eb3d1873efbb20c3375fda2e7d9a40" }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
reqwest = "0.11"
lazy_static = "1.4"
winit = "0.28.1"
web-sys = { version = "0.3.60", features = ["HtmlCollection", "Text"] }
instant = "0.1"
